amended comparison with mergesort

--- a/Time Complexity.ipynb
+++ b/Time Complexity.ipynb
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4c77b3f5",
+   "id": "f7433256",
    "metadata": {
     "scrolled": true
    },
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "49d07ccb",
+   "id": "0c815bc6",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "83ae224e",
+   "id": "cb50b079",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "573c177e",
+   "id": "e861596d",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14d51787",
+   "id": "d8c1ce80",
    "metadata": {},
    "source": [
     "# Comparing Time complexity with Time"
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c215006",
+   "id": "867f20e5",
    "metadata": {},
    "source": [
     "## Fixed S with differing N values"
@@ -1590,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "96d5b861",
+   "id": "1635b71a",
    "metadata": {
     "scrolled": true
    },
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f459c807",
+   "id": "15c0c8a1",
    "metadata": {},
    "source": [
     "# Comparing with Merge Sort\n"
@@ -1831,7 +1831,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "2f4cc441",
+   "id": "10a4fb7e",
    "metadata": {},
    "outputs": [
     {
@@ -1917,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "f1ee74a1",
+   "id": "d43bd4b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1927,7 +1927,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c22f1d53",
+   "id": "396de2a8",
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "adbf2d94",
+   "id": "d34c81a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "335b0979",
+   "id": "8d755aaa",
    "metadata": {},
    "outputs": [
     {
@@ -2053,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "81e9f5b5",
+   "id": "283810e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2063,7 +2063,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "95c67efd",
+   "id": "4b42b296",
    "metadata": {
     "scrolled": true
    },
@@ -2124,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "3d170285",
+   "id": "47be9347",
    "metadata": {},
    "outputs": [
     {
@@ -2144,8 +2144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "id": "89abaa8e",
+   "execution_count": 143,
+   "id": "d74c289a",
    "metadata": {},
    "outputs": [
     {
@@ -2155,10 +2155,14 @@
       "Merge Sort vs Hybrid(comparison)\n",
       "Difference in time: 538740 mircroseconds\n",
       "Percentage difference in time:  24.970729821653535\n",
+      "Difference in comparison: 2157\n",
+      "Percentage difference in comparison:  0.0011733469236317826\n",
       "\n",
       "Merge Sort vs Hybrid(time)\n",
-      "Difference in comparison: 1415306 mircroseconds\n",
-      "Percentage difference in comparison:  65.59977677723053\n"
+      "Difference in time: 1415306 mircroseconds\n",
+      "Percentage difference in time:  65.59977677723053\n",
+      "Difference in comparison: -22224134\n",
+      "Percentage difference in comparison:  -12.089299610236672\n"
      ]
     }
    ],
@@ -2172,13 +2176,24 @@
     "print(\"Merge Sort vs Hybrid(comparison)\")\n",
     "print(\"Difference in time: \" + str(T1) + \" mircroseconds\")\n",
     "print(\"Percentage difference in time: \", T1/(original[\"Time\"].item()) * 100)\n",
-    "\n",
+    "print(\"Difference in comparison: \"+ str(c1))\n",
+    "print(\"Percentage difference in comparison: \", c1/(original[\"Comparison\"].item()) * 100)\n",
     "\n",
     "print()\n",
     "print(\"Merge Sort vs Hybrid(time)\")\n",
-    "print(\"Difference in comparison: \"+ str(T2) + \" mircroseconds\")\n",
-    "print(\"Percentage difference in comparison: \", T2/(original[\"Time\"].item()) * 100)"
+    "print(\"Difference in time: \" + str(T2) + \" mircroseconds\")\n",
+    "print(\"Percentage difference in time: \", T2/(original[\"Time\"].item()) * 100)\n",
+    "print(\"Difference in comparison: \"+ str(c2))\n",
+    "print(\"Percentage difference in comparison: \", c2/(original[\"Comparison\"].item()) * 100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6917d72b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
